Fix up Large Rock entity a bit, fix removal of Icicle after a certain amount of ticks
Made it that my Bosses can now change targets if they get hit by a living entity, previously they would remain attached to their initial target regardless of what was hitting
them
Did a bit of experimentation with rendering weapon models, this will be done next update

--Before next release--
Finish the Epic weapon lores

--Planned for next release--
The Tragic Armor and Tragic Hellraiser Doomsdays will combine to form Isolation, which inflicts high damage and knocks all mobs away from the user, Tragic Armor's normal one
will be Harden, which gives the player a quick resistance 10 buff (3 seconds, short cooldown of maybe 10), the Hellraiser Doomsday will inflict damage on all mobs near the player
at a constant rate but will not knock them away, it'll also leech Doom off of them
Tragic Armor (with the full set) will also bring you back to life randomly if you die (like a 10% chance with random health)
The Sentinel's Doomsday will be Judgment day, which will stall all mobs in the air and inflict judgment damage onto them (they take damage equal to one-tenth of
their max health, this caps at around 15 though so that bosses don't get killed easily by this), this will be crafted with one Overlord Eye along with Celestial Diamonds,
it'll extend ItemJack so that it can be used to mine stuff as well
The final boss will be the Overlord, it'll have a ton of health and actually have a similar appearance to Orespawn's Kraken, however, it isn't a squid/octopus thing, it's a large
"metroid"-like creature, probably most similar to metroid prime in it's final boss stage, but with a few differences of course, it'll most likely utilize the multipart entity
thing as well as have a helper creature/underling
Pyris, Veneera, Luex could be the names of the Phoenix, each one could be a slight variant of each other, with different textures and slightly different attack patterns