@@ -5,6 +5,7 @@ import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.item.EnumRarity;
 import net.minecraft.item.ItemStack;
 import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
@@ -14,15 +15,22 @@ import net.minecraft.util.Vec3;
 import net.minecraft.world.World;
 import tragicneko.tragicmc.doomsday.Doomsday;
 import tragicneko.tragicmc.entity.projectile.EntityIcicle;
+import tragicneko.tragicmc.items.weapons.TragicWeapon.Lore;
 import tragicneko.tragicmc.main.TragicEnchantments;
 import tragicneko.tragicmc.main.TragicNewConfig;
 import tragicneko.tragicmc.properties.PropertyDoom;
 
 public class WeaponThardus extends EpicWeapon {
+	
+	private final Lore[] uniqueLores = new Lore[] {new Lore("Hyper beam!", EnumRarity.epic), new Lore("Zero suit...", EnumRarity.uncommon), new Lore("Grappling Hook!", EnumRarity.rare),
+			new Lore("Better than a Stun Gun.", EnumRarity.uncommon), new Lore("That's cool.", EnumRarity.uncommon), new Lore("Spazer Beam!"), new Lore("Phazon Beam!", EnumRarity.rare),
+			new Lore("Super Missle!", EnumRarity.rare), new Lore("Screw Attack!", EnumRarity.epic), new Lore("The last Metroid is in captivity.", EnumRarity.rare),
+			new Lore("Tasty.", EnumRarity.uncommon), new Lore("Charge Beam!"), new Lore("Plasma Beam!", EnumRarity.rare), new Lore("Heading to Brinstar!", EnumRarity.uncommon),
+			new Lore("Onwards to Norfair!", EnumRarity.rare), new Lore("Finally, Tourian!", EnumRarity.epic)};
 
 	public WeaponThardus(Doomsday dday) {
 		super(dday);
-		this.lores = new Lore[] {new Lore("ThardusLore1"), new Lore("ThardusLore2"), new Lore("ThardusLore3")};
+		this.lores = uniqueLores;
 		this.rareEnchants = new Enchantment[] {Enchantment.unbreaking, TragicEnchantments.Reach, Enchantment.sharpness};
 		this.rareLevels = new int[] {5, 3, 3};
 		this.epicEnchants = new Enchantment[] {Enchantment.unbreaking, TragicEnchantments.Reach, Enchantment.sharpness, TragicEnchantments.Rust};
